# hinder

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AI.md  CHANGELOG-stable.md  CLANG_TOOLS_UPDATE_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  ChangeLog.md  LICENSE  README.md  build.sh
.claude/rules/: cpp-style.md
cmake/: hinderConfig.cmake  hinderConfig.cmake.in  hinder_assertConfig.cmake.in  hinder_coreConfig.cmake.in  hinder_exceptionConfig.cmake  hinder_exceptionConfig.cmake.in  hinder_miscConfig.cmake  hinder_miscConfig.cmake.in  packaging.cmake
container/: build_container.sh  rebuild-debian-10.sh  rebuild-debian-11.sh  run_container.sh
container/debian-10/: Dockerfile.dev  setup.sh
container/debian-11/: Dockerfile.dev  bashrc  setup.sh
container/debian-bullseye/: Dockerfile.dev  bashrc  rebuild-debian-bullseye.sh  setup.sh
container/debian-buster/: Dockerfile.dev  rebuild-debian-buster.sh  setup.sh
container/ubuntu-focal/: Dockerfile.dev  rebuild-ubuntu-focal.sh
doc/: contents.md  exception.md  misc.md
doc/doc/: assert.md  cmake_options.md  compiler.md  containers.md  dependencies.md  exception.md  expected.md  format.md  packaging.md  portability.md  queue.md  timestamp.md  units.md
include/hinder/: compiler.h  format.h  json.h  json_string.h  platform.h  queue.h  timestamp.h  units.h
include/hinder/assert/: assert.h  assert_config.h
include/hinder/assert/detail/: format_message.h
include/hinder/assert/handlers/: base.h  classic.h  throw.h
include/hinder/core/: compiler.h  core.h  format.h  platform.h  timestamp.h
include/hinder/exception/: exception.h  exception_config.h  exception_value.h
include/hinder/exception/detail/: details.h  exception_message.h
include/hinder/expected/: error.h  expected.h
include/hinder/misc/: compiler.h  json_string.h  likely.h  literals.h  platform.h  portability.h  units.h
scripts/: build-packages.sh
src/: CMakeLists.txt
src/assert/: CMakeLists.txt  assert_config.cpp
src/core/: CMakeLists.txt  timestamp.cpp
src/exception/: CMakeLists.txt  exception.cpp  exception_config.cpp  format.cpp  string.cpp
src/expected/: error.cpp  format.cpp
src/misc/: CMakeLists.txt
tests/: .clang-tidy
tests/assert/: CMakeLists.txt  assert_tests.cpp  main.cpp
tests/core/: CMakeLists.txt  timestamp_tests.cpp
tests/exception/: CMakeLists.txt  exception_tests.cpp  main.cpp
tests/expected/: CMakeLists.txt  expected_tests.cpp
tests/misc/: CMakeLists.txt  json_string_tests.cpp  main.cpp  units_tests.cpp
tests/queue/: CMakeLists.txt  queue_tests.cpp
